Add thread route
