# apps/gateway/docs/swagger.yaml
@@ -22,6 +22,42 @@ definitions:
         example: 12
         type: integer
     type: object
+  dto.CreateReply:
+    properties:
+      body:
+        example: 1+1=3
+        type: string
+    type: object
+  dto.CreateThread:
+    properties:
+      course_name:
+        example: 2110101 Calculus I
+        type: string
+      exam_name:
+        example: 2011 - S1 - Final
+        type: string
+      problem_description:
+        example: What is 'Monad'?
+        type: string
+      problem_name:
+        example: 1+1=???
+        type: string
+      tags:
+        example:
+        - calculus
+        - "2110101"
+        - limit
+        - hard
+        items:
+          type: string
+        type: array
+    type: object
+  dto.CreateThreadResponse:
+    properties:
+      thread_id:
+        example: TODO!(OBJECTID)
+        type: string
+    type: object
   dto.Exam:
     properties:
       exam_name:
@@ -49,6 +85,52 @@ definitions:
       email:
         example: 6530000021@student.chula.ac.th
         type: string
+    type: object
+  dto.Reply:
+    properties:
+      body:
+        example: 1+1=3
+        type: string
+      downvote:
+        example: 420
+        type: integer
+      thread_id:
+        example: TODO!(OBJECTID)
+        type: string
+      upvote:
+        example: 42
+        type: integer
+    type: object
+  dto.Thread:
+    properties:
+      downvote:
+        example: 12
+        type: integer
+      problem_description:
+        example: What is 'Monad'?
+        type: string
+      problem_name:
+        example: 1+1=???
+        type: string
+      replies:
+        items:
+          $ref: '#/definitions/dto.Reply'
+        type: array
+      tags:
+        example:
+        - calculus
+        - "2110101"
+        - limit
+        - hard
+        items:
+          type: string
+        type: array
+      thread_id:
+        example: TODO!(OBJECTID)
+        type: string
+      upvote:
+        example: 12
+        type: integer
     type: object
   dto.ThreadSummary:
     properties:
@@ -210,4 +292,84 @@ paths:
       summary: GetExam
       tags:
       - Exam
+  /thread:
+    post:
+      consumes:
+      - application/json
+      description: Create thread (require session)
+      parameters:
+      - description: Thread information
+        in: body
+        name: thread
+        required: true
+        schema:
+          $ref: '#/definitions/dto.CreateThread'
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/dto.CreateThreadResponse'
+        "401":
+          description: Unauthorized
+        "500":
+          description: Internal Server Error
+        "503":
+          description: Service Unavailable
+      summary: CreateThread
+      tags:
+      - Thread
+  /thread/:thread_id:
+    get:
+      consumes:
+      - application/json
+      description: get specific thread
+      parameters:
+      - description: Thread id
+        in: path
+        name: thread_id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/dto.Thread'
+        "500":
+          description: Internal Server Error
+        "503":
+          description: Service Unavailable
+      summary: GetThread
+      tags:
+      - Thread
+  /thread/:thread_id/reply:
+    post:
+      consumes:
+      - application/json
+      description: Create reply in thread (require session)
+      parameters:
+      - description: Reply information
+        in: body
+        name: reply
+        required: true
+        schema:
+          $ref: '#/definitions/dto.CreateReply'
+      - description: Thread id
+        in: path
+        name: thread_id
+        required: true
+        type: string
+      responses:
+        "200":
+          description: OK
+        "401":
+          description: Unauthorized
+        "500":
+          description: Internal Server Error
+        "503":
+          description: Service Unavailable
+      summary: CreateReply
+      tags:
+      - Thread
 swagger: "2.0"
